--- a/src/App.css
+++ b/src/App.css
@@ -14,16 +14,13 @@ body {
   font-family: sans-serif;
 }
 
-.container {
-  /* display: flex;
-  flex-direction: column; */
-  margin: 10px;
-  /* align-items: center; */
-  text-align: center;
-  width: 400px;
-  max-width: 90vw;
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.bottom-container {
+.container {
   margin: 10px;
+  max-width: 90vw;
 }
