--- a/src/components/ProjectsTable/projectsTable.css
+++ b/src/components/ProjectsTable/projectsTable.css
@@ -5,18 +5,14 @@ table {
   text-align: left;
 }
 tbody {
-  /* display: block; */
   max-height: 300px;
   overflow-y: auto;
   width: 100%;
 }
 
 table thead {
-  /* display: block; */
   background-color: #f2f2f2;
   position: sticky;
-  /* overflow: hidden; */
-
   top: 0;
   z-index: 1;
 }
@@ -25,7 +21,7 @@ td,
 th {
   border-bottom: 1px solid rgb(190, 190, 190);
   border-right: 1px solid rgb(190, 190, 190);
-  padding: 10px;
+  padding: 12px 20px;
 }
 
 table tr td:first-child,
